change(package.json): Reorganize scripts into `lint`/`fix` structure & Add `typecheck`
- Split lint into `lint:eslint` and `lint:prettier`, unified under `lint`
- Split fix into `fix:eslint` and `fix:prettier`, unified under `fix`
- Add `typecheck` script for `tsc --noEmit`
- Rename `format`/`format:check` to `fix:prettier`/`lint:prettier`

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "format:check": "prettier --check 'src/**/*.{ts,tsx}'"
+    "typecheck": "tsc --noEmit",
+    "lint": "bun lint:eslint && bun lint:prettier",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
+    "fix": "bun fix:eslint && bun fix:prettier",
+    "fix:eslint": "eslint --fix .",
+    "fix:prettier": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "jszip": "^3.10.1",
