--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,9 @@
 {
-  "semi": true,
-  "singleQuote": false,
+  "semi": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 100,
+  "printWidth": 120,
   "bracketSpacing": true,
   "arrowParens": "always"
 }
